# MotionCare

./: .env.example  .gitignore  AGENTS.md  docker-compose.yml
backend/: conftest.py  db.sqlite3  pyproject.toml
backend/apps/accounts/: admin.py  auth_urls.py  auth_views.py  models.py  serializers.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_user_gender_must_change_password.py
backend/apps/accounts/tests/: test_auth_flow.py  test_doctor_management_api.py  test_password_change_gate.py  test_user_model.py
backend/apps/common/: models.py  permissions.py
backend/apps/crf/: models.py  registry_loader.py  registry_validate.py  serializers.py  urls.py  views.py
backend/apps/crf/migrations/: 0001_initial.py
backend/apps/health/: models.py  serializers.py  urls.py  views.py
backend/apps/patient_app/: apps.py  authentication.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/patients/: models.py  serializers.py  urls.py  views.py
backend/apps/prescriptions/: models.py  serializers.py  services.py  urls.py  views.py
backend/apps/studies/: models.py  project_status.py  serializers.py  urls.py  views.py
backend/apps/training/: models.py  patient_sim_urls.py  patient_sim_views.py  serializers.py  services.py  urls.py  views.py
backend/apps/visits/: filters.py  models.py  serializers.py  services.py  urls.py  views.py
backend/config/: celery.py  settings.py  urls.py
backend/motioncare_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_api_smoke.py  test_settings.py
(+241 files in other folders)
